--- a/1-data_collection.ipynb
+++ b/1-data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9cefc65",
+   "id": "03850870",
    "metadata": {},
    "source": [
     "## Paquetes"
@@ -17,27 +17,24 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re\n",
-    "import time"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "f5607bc3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests as req\n",
-    "from bs4 import BeautifulSoup as bs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b8d72290",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.8) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "from src.scraping_functions import *"
@@ -45,14 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1e65c29b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
-    "from selenium.webdriver.common.keys import Keys\n",
     "\n",
     "#driver configuration\n",
     "opciones=Options()\n",
@@ -70,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a02c907",
+   "id": "88d277da",
    "metadata": {},
    "source": [
     "## Importar  y limpiar csv"
@@ -78,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "id": "5dc33fc8",
    "metadata": {},
    "outputs": [],
@@ -88,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "id": "6057a4e8",
    "metadata": {},
    "outputs": [
@@ -98,7 +94,7 @@
        "(91933, 3)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "id": "27c0f5c0",
    "metadata": {},
    "outputs": [
@@ -141,49 +137,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>79514</th>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>25-04-2021</td>\n",
-       "      <td>6.429</td>\n",
+       "      <th>28025</th>\n",
+       "      <td>France</td>\n",
+       "      <td>01-11-2020</td>\n",
+       "      <td>11.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29098</th>\n",
-       "      <td>Gabon</td>\n",
-       "      <td>26-10-2021</td>\n",
-       "      <td>-13.286</td>\n",
+       "      <th>76501</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>19-11-2020</td>\n",
+       "      <td>0.714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32209</th>\n",
-       "      <td>Guatemala</td>\n",
-       "      <td>07-09-2020</td>\n",
-       "      <td>16.000</td>\n",
+       "      <th>76774</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>19-08-2021</td>\n",
+       "      <td>5.857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>84917</th>\n",
-       "      <td>Uganda</td>\n",
-       "      <td>20-06-2020</td>\n",
-       "      <td>15.857</td>\n",
+       "      <th>70189</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>27-01-2021</td>\n",
+       "      <td>5.857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19778</th>\n",
-       "      <td>Costa Rica</td>\n",
-       "      <td>18-09-2021</td>\n",
-       "      <td>4.714</td>\n",
+       "      <th>86536</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>28-12-2020</td>\n",
+       "      <td>19.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Entity         Day  Increase in Residential Stay\n",
-       "79514  Switzerland  25-04-2021                         6.429\n",
-       "29098        Gabon  26-10-2021                       -13.286\n",
-       "32209    Guatemala  07-09-2020                        16.000\n",
-       "84917       Uganda  20-06-2020                        15.857\n",
-       "19778   Costa Rica  18-09-2021                         4.714"
+       "               Entity         Day  Increase in Residential Stay\n",
+       "28025          France  01-11-2020                        11.000\n",
+       "76501     South Korea  19-11-2020                         0.714\n",
+       "76774     South Korea  19-08-2021                         5.857\n",
+       "70189         Romania  27-01-2021                         5.857\n",
+       "86536  United Kingdom  28-12-2020                        19.000"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "f928b06c",
    "metadata": {},
    "outputs": [
@@ -207,7 +203,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "f1b7de8e",
    "metadata": {},
    "outputs": [
@@ -245,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "id": "bccea6ea",
    "metadata": {},
    "outputs": [],
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "id": "bb5cfaf4",
    "metadata": {},
    "outputs": [],
@@ -266,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "a9a100c5",
    "metadata": {},
    "outputs": [
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "9d15bed8",
    "metadata": {},
    "outputs": [],
@@ -303,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "id": "dd868a6c",
    "metadata": {},
    "outputs": [
@@ -313,7 +309,7 @@
        "Timestamp('2020-02-17 00:00:00')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "c5e7c624",
+   "execution_count": 14,
+   "id": "c62e9340",
    "metadata": {
     "scrolled": true
    },
@@ -334,7 +330,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2114/2038731044.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2441/2038731044.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -348,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "37efec66",
+   "execution_count": 15,
+   "id": "28690824",
    "metadata": {
     "scrolled": true
    },
@@ -418,7 +414,7 @@
        "86939 2020-02-21                         0.714"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8465b469",
+   "id": "0255f6d7",
    "metadata": {},
    "source": [
     "## Scrapeo"
@@ -437,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "8c74ad6b",
    "metadata": {},
    "outputs": [],
@@ -452,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "81245683",
    "metadata": {},
    "outputs": [],
@@ -468,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "id": "6646975d",
    "metadata": {},
    "outputs": [
@@ -499,29 +495,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>2021-07-12</td>\n",
-       "      <td>537.31</td>\n",
+       "      <th>156</th>\n",
+       "      <td>2021-06-24</td>\n",
+       "      <td>518.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>492</th>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>360.09</td>\n",
+       "      <th>45</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>617.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>461</th>\n",
-       "      <td>2020-04-08</td>\n",
-       "      <td>371.12</td>\n",
+       "      <th>263</th>\n",
+       "      <td>2021-01-21</td>\n",
+       "      <td>579.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>2021-01-25</td>\n",
-       "      <td>556.78</td>\n",
+       "      <th>465</th>\n",
+       "      <td>2020-04-02</td>\n",
+       "      <td>370.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>517.92</td>\n",
+       "      <th>70</th>\n",
+       "      <td>2021-10-26</td>\n",
+       "      <td>668.52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -529,14 +525,14 @@
       ],
       "text/plain": [
        "          date close_NFLX\n",
-       "145 2021-07-12     537.31\n",
-       "492 2020-02-25     360.09\n",
-       "461 2020-04-08     371.12\n",
-       "261 2021-01-25     556.78\n",
-       "120 2021-08-16     517.92"
+       "156 2021-06-24     518.06\n",
+       "45  2021-12-01     617.77\n",
+       "263 2021-01-21     579.84\n",
+       "465 2020-04-02     370.08\n",
+       "70  2021-10-26     668.52"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,8 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "68a74e48",
+   "execution_count": 19,
+   "id": "9d38a0d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,8 +553,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "d4eaa5ba",
+   "execution_count": 20,
+   "id": "c8273365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,8 +563,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "dabc492d",
+   "execution_count": 21,
+   "id": "6ba61234",
    "metadata": {},
    "outputs": [
     {
@@ -601,44 +597,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>2020-09-09</td>\n",
-       "      <td>7.571</td>\n",
-       "      <td>500.19</td>\n",
-       "      <td>133.36</td>\n",
-       "      <td>6.26</td>\n",
+       "      <th>348</th>\n",
+       "      <td>2021-07-02</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>533.98</td>\n",
+       "      <td>177.11</td>\n",
+       "      <td>51.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>2020-05-07</td>\n",
-       "      <td>14.714</td>\n",
-       "      <td>436.53</td>\n",
-       "      <td>105.57</td>\n",
-       "      <td>3.99</td>\n",
+       "      <th>319</th>\n",
+       "      <td>2021-05-21</td>\n",
+       "      <td>4.714</td>\n",
+       "      <td>497.89</td>\n",
+       "      <td>172.40</td>\n",
+       "      <td>12.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>2020-04-03</td>\n",
-       "      <td>18.429</td>\n",
-       "      <td>361.76</td>\n",
-       "      <td>93.88</td>\n",
-       "      <td>2.27</td>\n",
+       "      <th>18</th>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>-0.143</td>\n",
+       "      <td>315.25</td>\n",
+       "      <td>91.81</td>\n",
+       "      <td>2.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>2021-04-06</td>\n",
-       "      <td>6.286</td>\n",
-       "      <td>544.53</td>\n",
-       "      <td>189.73</td>\n",
-       "      <td>10.20</td>\n",
+       "      <th>222</th>\n",
+       "      <td>2020-12-31</td>\n",
+       "      <td>14.286</td>\n",
+       "      <td>540.73</td>\n",
+       "      <td>181.18</td>\n",
+       "      <td>2.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2020-03-11</td>\n",
-       "      <td>-0.429</td>\n",
-       "      <td>349.92</td>\n",
-       "      <td>105.51</td>\n",
-       "      <td>3.64</td>\n",
+       "      <th>437</th>\n",
+       "      <td>2021-11-08</td>\n",
+       "      <td>4.429</td>\n",
+       "      <td>651.45</td>\n",
+       "      <td>176.87</td>\n",
+       "      <td>45.06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -646,14 +642,14 @@
       ],
       "text/plain": [
        "          date  Increase in Residential Stay close_NFLX close_DIS close_AMC\n",
-       "143 2020-09-09                         7.571     500.19    133.36      6.26\n",
-       "57  2020-05-07                        14.714     436.53    105.57      3.99\n",
-       "34  2020-04-03                        18.429     361.76     93.88      2.27\n",
-       "286 2021-04-06                         6.286     544.53    189.73     10.20\n",
-       "17  2020-03-11                        -0.429     349.92    105.51      3.64"
+       "348 2021-07-02                         4.000     533.98    177.11     51.96\n",
+       "319 2021-05-21                         4.714     497.89    172.40     12.08\n",
+       "18  2020-03-12                        -0.143     315.25     91.81      2.91\n",
+       "222 2020-12-31                        14.286     540.73    181.18      2.12\n",
+       "437 2021-11-08                         4.429     651.45    176.87     45.06"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a4d9e0",
+   "id": "b4873b62",
    "metadata": {},
    "outputs": [],
    "source": []
