--- a/1-data_collection.ipynb
+++ b/1-data_collection.ipynb
@@ -13,11 +13,22 @@
    "execution_count": 1,
    "id": "09dd39cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.8) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import requests as req\n",
+    "from datetime import date"
    ]
   },
   {
@@ -659,9 +670,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e9db560",
+   "metadata": {},
+   "source": [
+    "## Api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a5e1077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2022-02-03', 1.9), ('2022-02-04', -3.1), ('2022-02-05', -6.9)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_date=date(2022, 2, 3)\n",
+    "end_date=date(2022, 2, 5)\n",
+    "\n",
+    "daterange = pd.date_range(start_date, end_date)\n",
+    "datos_tiempo=[]\n",
+    "\n",
+    "for single_date in daterange:\n",
+    "    url=f'http://api.weatherapi.com/v1/history.json?key=40e98f4fcb06417bbe1182003220702&q=New-York&dt={single_date}'\n",
+    "    datos_tiempo.append((req.get(url).json()[\"forecast\"][\"forecastday\"][0][\"date\"],req.get(url).json()[\"forecast\"][\"forecastday\"][0][\"day\"][\"avgtemp_c\"]))\n",
+    "datos_tiempo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4873b62",
+   "id": "1cdcb8d9",
    "metadata": {},
    "outputs": [],
    "source": []
